<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_glide_description">The Glide repository is downloaded</string>
    <string name="notification_app_description">The Project 3 repository is downloaded</string>
    <string name="notification_retrofit_description">The Retrofit repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_download">Glide - Image Loading Library Bump Tech</string>
    <string name="load_app_download">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square</string>
    <string name="download">Download</string>

    <string name="status">Status:</string>
    <string name="file_name">File Name:</string>
    <string name="ok">OK</string>

    <string name="downloading">We are loading</string>
    <string name="downloadToast">Please select the file to download</string>

    <string name="check_status">check the status</string>
</resources>
